Fix alignment and icon

--- a/kpm/kpm-frontend/src/Menu.scss
+++ b/kpm/kpm-frontend/src/Menu.scss
@@ -136,17 +136,10 @@ $icon-kpm-notifications: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%
 
   body #kpm-6cf53 .kpm-menu > ul {
     flex-direction: column;
-    align-items: self-end;
 
     & > .kpm-mobile-menu {
       display: inline-flex;
-    }
-
-    & > .kpm-menu-shotcuts {
-      position: fixed;
-      top: 0;
-      right: 0;
-      font-size: 1.8em;
+      align-self: self-end;
     }
 
     .kpm-profile-item {
@@ -167,8 +160,10 @@ $icon-kpm-notifications: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%
     & > li.kpm-schedule-item,
     & > li.kpm-mobile-logout {
       display: unset;
-      font-size: 1.1em;
-      padding: 0;
+    }
+
+    .kpm-menu-item::after {
+      rotate: 0deg;
     }
   }
 }
